--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,4 +23,4 @@ spring.profiles.active=production
 server.port=${PORT:5000}
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = validate
