--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,7 @@ spring.profiles.active=production
 server.port=${PORT:5000}
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto = validate
+spring.jpa.hibernate.ddl-auto = create
 
 
 #spring.datasource.driver-class-name=org.gjt.mm.mysql.Driver
