--- a/pom.xml
+++ b/pom.xml
@@ -78,9 +78,9 @@
         </dependency>
 
 		<dependency>
-			<groupId>io.humble</groupId>
-			<artifactId>humble-video-all</artifactId>
-			<version>0.2.1</version>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>23.5-jre</version>
 		</dependency>
 
 
@@ -93,11 +93,6 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 
-			<plugin>
-				<groupId>com.google.cloud.tools</groupId>
-				<artifactId>appengine-maven-plugin</artifactId>
-				<version>1.3.1</version>
-			</plugin>
 		</plugins>
 	</build>
 
